fixed alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 body {
     font-family: 'Raleway', sans-serif;
     color: #272829;
+    overflow-x: hidden;
 }
 
 a {
@@ -157,6 +158,9 @@ h6 {
 @media (min-width: 992px) {
     #main {
         margin-left: 100px;
+    }
+    #bio-pic {
+        height: 425px;
     }
 }
 
